# education

./: .flake8  README.md  mylog.txt  pyproject.toml  test_log.txt  utils.py
src/: Readme.md  decorators.py  external_api.py  generators.py  main.py  masks.py  my123.txt  mylog.txt  processing.py  widget.py
tests/: mylog.txt  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
